fix header alignment on safari

--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -19,6 +19,11 @@
   line-height: 50px;
 }
 
+.app-header ul li span {
+  display: inline-block;
+  position: relative;
+}
+
 .header-name {
   margin-right: 10px;
 }
@@ -30,7 +35,7 @@
 .header-current-page.before:before {
   height: 16px;
   width: 1px;
-  top: 0px;
+  top: 17px;
   left: 5px;
   transform: rotateZ(25deg);
   transition: .2s all ease;
@@ -38,7 +43,7 @@
 .header-current-page.after:after {
   height: 1px;
   width: 0px;
-  top: 23px;
+  top: 40px;
   left: 9px;
   transition: .2s width ease;
 }
@@ -47,7 +52,7 @@
   width: 30px;
   height: 1px;
   width: 20px;
-  top: 25px;
+  top: 42px;
   left: 6px;
   transition: .2s width ease;
 }
@@ -55,7 +60,7 @@
   width: 30px;
   height: 16px;
   width: 1px;
-  top: 10px;
+  top: 27px;
   left: 5px;
   transform: rotateZ(0deg);
 }
